--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer  Portfolio</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <header>
-       <h1>developer-portfolio</h1>
+       <nav>
+        <h3>Mary</h3>
+        <ul>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Hire  Me</a></li>
+        </ul>
+       </nav>
     </header>
     <main>
 
