complet about section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button class="btn-primary">Contact</button>
 
             </div>
-            <img class="profile" src="images/hardy.png" alt="">
+            <img class="profile" src="images/icons/ns.jpg" alt="">
         </div>
     </header>
     <main>
@@ -47,6 +47,24 @@
                 mata.
 
             </p>
+            <div class="about-info-container">
+                <!-- .about-inf*4>h4.info-title+p.info-description            </div> -->
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Nizam Sakil</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-description">nizam.cse70@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth: </h4>
+                    <p class="info-description">8 Octorbe 2002 </p>
+                </div>
+                <div class="about-info"> 
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-description">Vatara Dhaka</p>
+                </div>
     </main>
     <footer>
 
