--- a/index.html
+++ b/index.html
@@ -61,10 +61,49 @@
                     <h4 class="info-title">Date of birth: </h4>
                     <p class="info-description">8 Octorbe 2002 </p>
                 </div>
-                <div class="about-info"> 
+                <div class="about-info">
                     <h4 class="info-title">From:</h4>
                     <p class="info-description">Vatara Dhaka</p>
                 </div>
+        </section>
+
+        <!-- what id do sart  -->
+        <section>
+            <div>
+                <h3 class="section-title">What I do</h3>
+                <p  id="what-i-do-descreption" class="section-description">I have more than 10 years experience building software for clients all
+                    over the world.
+                    Below is a quick overview of my main technical skill sets and technologies i use.
+                    Want to find out more about my experience? Check out my online resume and project portfolio.
+                </p>
+                <div class="skills-continer">
+                    <!-- .skill*4>img+h3.skill-title+p.skill-description -->
+                    <div class="skill">
+                        <img src="images/icons/js.png" alt="">
+                        <h3 class="skill-title">Vanilla JavaScrip</h3>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/react.png " alt="">
+                        <h3 class="skill-title">React</h3>
+                        <p class="skill-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <h3 class="skill-title">Node.js</h3>
+                        <p class="skill-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/mongo.png" alt="">
+                        <h3 class="skill-title">MongoDB</h3>
+                        <p class="skill-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
