--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <section>
             <div>
                 <h3 class="section-title">What I do</h3>
-                <p  id="what-i-do-descreption" class="section-description">I have more than 10 years experience building software for clients all
+                <p id="what-i-do-descreption" class="section-description">I have more than 10 years experience building
+                    software for clients all
                     over the world.
                     Below is a quick overview of my main technical skill sets and technologies i use.
                     Want to find out more about my experience? Check out my online resume and project portfolio.
@@ -81,25 +82,29 @@
                     <div class="skill">
                         <img src="images/icons/js.png" alt="">
                         <h3 class="skill-title">Vanilla JavaScrip</h3>
-                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any
+                            of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skill">
                         <img src="images/icons/react.png " alt="">
                         <h3 class="skill-title">React</h3>
                         <p class="skill-description">
-                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome
+                            5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skill">
                         <img src="images/icons/nodejs.png" alt="">
                         <h3 class="skill-title">Node.js</h3>
                         <p class="skill-description">
-                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome
+                            5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skill">
                         <img src="images/icons/mongo.png" alt="">
                         <h3 class="skill-title">MongoDB</h3>
                         <p class="skill-description">
-                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome
+                            5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
             </div>
@@ -107,62 +112,73 @@
         <!-- resume section -->
 
         <section class="resume"></section>
-            <h3 class="section-title">A summary of My Resume</h3>
-            <div class="resume-content">
-                <div>
-                    <h3 class="resume-title">My Education</h3>
-                    <div class="resume-item">
-                        <h4 class="title">Master in Computer Engineering</h4>
-                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
-                    <hr>
-                    <div class="resume-item">
-                        <h4 class="title">Master in Computer Engineering</h4>
-                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
-                    <hr>
-                    <div class="resume-item">
-                        <h4 class="title">Master in Computer Engineering</h4>
-                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-content">
+            <div>
+                <h3 class="resume-title">My Education</h3>
+                <div class="resume-item">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
-                <div>
-                    <h3 class="resume-title">My Experience</h3>
-                    <div class="resume-item">
-                        <h4 class="title">Master in Computer Engineering</h4>
-                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
-                    <hr>
-                    <div class="resume-item">
-                        <h4 class="title">Master in Computer Engineering</h4>
-                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
-                    <hr>
-                    <div class="resume-item">
-                        <h4 class="title">Master in Computer Engineering</h4>
-                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
-            <div class="resume-button">
-                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+            <div>
+                <h3 class="resume-title">My Experience</h3>
+                <div class="resume-item">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="title">Master in Computer Engineering</h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
             </div>
+        </div>
+        <div class="resume-button">
+            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+        </div>
         </section>
     </main>
     <footer>
-
+      <div class="footer-column">
+       <h3 class="section-title">Lets Connect</h3>
+       <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+       <div class="social-links">
+        <a href=""><img src="images/icons/facebook.png" alt=""></a>
+        <a href=""><img src="images/icons/twitter.png" alt=""></a>
+        <a href=""><img src="images/icons/insta.png" alt=""></a>
+       </div>
+      </div>
+      <div class="footer-column">
+        <h3 class="section-title">Let’s Message me</h3>
+      </div>
     </footer>
 </body>
 
