--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
       </div>
       <div class="footer-column">
         <h3 class="section-title">Let’s Message me</h3>
+        <form  class="contact"  action="">
+             <input type="text" name="name" id="name " placeholder="Your Name">
+             <input type="email" name="name" id="name" placeholder="Your Email">
+             <textarea name="" id="" >Message here</textarea>
+             <input class="btn-primary" type="submit" value="submit">
+        </form>
       </div>
     </footer>
 </body>
