--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <input type="text" name="name" id="name " placeholder="Your Name">
                 <input type="email" name="name" id="name" placeholder="Your Email">
                 <textarea name="" id="">Message here</textarea>
-                <input class="btn-primary" type="submit" value="submit">
+                <input class="btn-primary" type="submit" value="Submit">
             </form>
         </div>
     </footer>
